--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ pandas
 transformers
 pipeline
 io
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+tensorflow-intel==2.11.0
+tensorflow-io-gcs-filesystem==0.29.0
+
+torch==1.13.1
