--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ pandas
 transformers
 pipeline
 io
+TensorFlow 2.0
 tensorflow==2.11.0
 tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.29.0
-
+PyTorch
 torch
