--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,4 @@
-aiohttp
-aiosignal
-altair
-annotated-types
-anyio
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asttokens
-async-lru
-attrs
-Babel
-beautifulsoup4
-bleach
-blinker
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-colorama
-comm
-contourpy
-cycler
-datasets
-debugpy
-decorator
-defusedxml
-dill
-distlib
-evaluate
-executing
-fastapi
-fastjsonschema
-filelock
-fonttools
-fqdn
-frozenlist
-fsspec
-geojson
-gitdb
-GitPython
-h11
-huggingface-hub
-idna
-importlib-metadata
-ipykernel
-ipython
-isoduration
-jedi
-Jinja2
-joblib
-json5
-jsonpointer
-jsonschema
-jsonschema-specifications
-jupyter-events
-jupyter-lsp
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab
-jupyterlab_pygments
-jupyterlab_server
-kiwisolver
-markdown-it-py
-MarkupSafe
-matplotlib
-matplotlib-inline
-mdurl
-mistune
-mpmath
-multidict
-multiprocess
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx
-notebook
-notebook_shim
-numpy
-overrides
-packaging
-pandas
-pandocfilters
-parso
-Pillow
-platformdirs
-plotly
-prometheus-client
-prompt-toolkit
-protobuf
-psutil
-pure-eval
-pyarrow
-pyarrow-hotfix
-pycparser
-pydantic
-pydantic_core
-pydeck
-pygame
-Pygments
-pyowm
-pyparsing
-PySocks
-pyTelegramBotAPI
-python-dateutil
-python-json-logger
-pytz
-pywin32
-pywinpty
-PyYAML
-pyzmq
-referencing
-regex
-requests
-responses
-rfc3339-validator
-rfc3986-validator
-rich
-rpds-py
-safetensors
-scikit-learn
-scipy
-seaborn
-Send2Trash
-setuptools
-six
-smmap
-sniffio
-soupsieve
-stack-data
-starlette
-streamlit
-sympy
-tenacity
-terminado
-threadpoolctl
-tinycss2
-tokenizers
-toml
-toolz
-torch
-torchaudio
-torchvision
-tornado
-tqdm
-traitlets
 transformers
-types-python-dateutil
-typing_extensions
-tzdata
-tzlocal
-uri-template
-urllib3
-utils
-uvicorn
-validators
-virtualenv
-watchdog
-wcwidth
-webcolors
-webencodings
-websocket-client
-xxhash
-yarl
-zipp
+pipeline
+tensorflow
+torch
